--- a/Projet Films EYLON Nathan/cinemustResult.html
+++ b/Projet Films EYLON Nathan/cinemustResult.html
@@ -1,47 +1,47 @@
-<!DOCTYPE html>
-<html lang="fr" class="scroll">
+<!DOCTYPE html> <!-- Déclaration du type de document HTML5 -->
+<html lang="fr" class="scroll"> <!-- Début du document, langue française et classe pour le scroll -->
 <head>
   <meta charset="utf-8" /> <!-- Encodage UTF-8 -->
-  <meta name="viewport" content="width=device-width,initial-scale=1" /> <!-- Responsive design -->
-  <title>Recherche - Cinemust</title> <!-- Titre de la page -->
+  <meta name="viewport" content="width=device-width,initial-scale=1" /> <!-- Adaptation responsive -->
+  <title>Recherche - Cinemust</title> <!-- Titre de la page affiché dans l'onglet -->
 
-  <!-- === CSS global du site === -->
+  <!-- CSS principal -->
   <link rel="stylesheet" href="cinemustAcceuil.css">
 
-  <!-- === Polices Google === -->
+  <!-- Préconnexion aux serveurs Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Inclusion des polices Google -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Lato:wght@400;700&family=Cinzel+Decorative&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- === Logo cliquable pour retour accueil === -->
+  <!-- Logo cliquable -->
   <img id="image-responsive" src="Icons/Cinemust.png" alt="Logo">
 
-  <!-- === Bouton menu dots pour panneau latéral === -->
+  <!-- Bouton pour ouvrir le menu latéral -->
   <button id="menu-dots" aria-label="Ouvrir menu">
-    <span id="dot-1"></span>
-    <span id="dot-2"></span>
-    <span id="dot-3"></span>
+    <span id="dot-1"></span> <!-- Point 1 du bouton -->
+    <span id="dot-2"></span> <!-- Point 2 du bouton -->
+    <span id="dot-3"></span> <!-- Point 3 du bouton -->
   </button>
 
-  <!-- === Panneau latéral / menu === -->
+  <!-- Panneau latéral / menu -->
   <aside id="side-panel" role="dialog" aria-hidden="true" aria-labelledby="side-panel-title">
-    <!-- Bouton fermer panneau -->
+    <!-- Bouton pour fermer le panneau -->
     <button id="side-panel-close" aria-label="Fermer panneau">×</button>
     
     <!-- Contenu du panneau -->
     <div id="side-panel-content">
-      <!-- Titre du panneau -->
-      <h3 id="side-panel-title">Menu</h3>
+      <h3 id="side-panel-title">Menu</h3> <!-- Titre du menu -->
 
-      <!-- Lien vers la section introduction -->
+      <!-- Lien vers l'introduction -->
       <h4 id="link-intro" role="button" tabindex="0">Introduction</h4>
       <div id="content-intro" aria-hidden="true">
         <p>Texte d'introduction — cliquez pour développer/fermer.</p>
       </div>
 
-      <!-- Lien vers la section à propos -->
+      <!-- Lien vers la section À propos -->
       <h4 id="link-about" role="button" tabindex="0">À propos de nous</h4>
       <div id="content-about" aria-hidden="true">
         <p>Texte "à propos de nous" — cliquez pour développer/fermer.</p>
@@ -49,23 +49,23 @@
     </div>
   </aside>
 
-  <!-- === Titre principal de la page === -->
-  <h1 id="titre-principal">Recherche du mordus de films</h1>
+  <!-- Titre principal de la page -->
+  <h1 id="titre-principal">Cinemust</h1>
 
-  <!-- === Conteneur des résultats de recherche TMDB === -->
+  <!-- Conteneur pour les résultats de recherche -->
   <div id="results"></div>
 
-  <!-- === Footer avec droits et liens ressources === -->
+  <!-- Footer avec droits et liens -->
   <footer>
     <p>&copy; 2025 Cinemust. Tous droits réservés.</p>
     <nav>
-      <a href="./CG.pdf" target="_blank" rel="noopener noreferrer">Charte graphique</a> |
-      <a href="./cdg.pdf" target="_blank" rel="noopener noreferrer">Cahier des charges</a> |
-      <a href="./D.pdf" target="_blank" rel="noopener noreferrer">Diagrammes</a>
+      <a href="./CG.pdf" target="_blank" rel="noopener noreferrer">Charte graphique</a> <!-- Lien vers la charte graphique -->
+      <a href="./cdg.pdf" target="_blank" rel="noopener noreferrer">Cahier des charges</a> <!-- Lien vers le cahier des charges -->
+      <a href="./D.pdf" target="_blank" rel="noopener noreferrer">Diagrammes</a> <!-- Lien vers les diagrammes -->
     </nav>
   </footer>
 
-  <!-- === Script JS principal pour interactions et recherche === -->
+  <!-- Script JS pour gérer interactions et recherche -->
   <script src="cinemust.js" defer></script>
 </body>
 </html>
